# duck-craft

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  perf.data  perf.data.old
include/application/: application.hpp
include/common/: constant.hpp
include/core/setting/: setting.hpp
include/engine/: engine.hpp
include/engine/camera/: camera.hpp  frustum.hpp
include/engine/camera/component/: mvp.hpp  rotation.hpp  view.hpp
include/engine/entity/: aabb.hpp  cube.hpp  plane.hpp  quad.hpp  ray.hpp  sphere.hpp
include/engine/math/hash/vector/: ivec3.hpp
include/engine/model/: mesh.hpp  topology.hpp  transform.hpp  vertex.hpp
include/engine/shader/: shader.hpp
include/engine/sound/: buffer.hpp  source.hpp
include/engine/threading/: thread_pool.hpp
include/engine/world/: block.hpp  block_flag.hpp  block_metadata.hpp  block_type.hpp  chunk.hpp  chunk_state.hpp  chunk_task.hpp  cloud.hpp  config.hpp  face.hpp  face_type.hpp  generator.hpp  height_map.hpp  light.hpp  sky.hpp  tree.hpp  world.hpp
include/logger/: logger.hpp
include/manager/: camera_manager.hpp  chunk_manager.hpp  display_manager.hpp  shader_manager.hpp  sound_manager.hpp  texture_manager.hpp
include/parser/: nbt.hpp
include/utility/: colour_utility.hpp  file_utility.hpp  math_utility.hpp  string_utility.hpp
resources/shaders/: cloud.frag  cloud.vert  scene.frag  scene.vert  sky.frag  sky.vert  water.frag  water.vert
resources/shaders/common/: colour.glsl  fog.glsl
resources/textures/block/: index.txt  metadata.json
scripts/: build.sh  install.sh  profile.sh  run.sh
src/application/: application.cpp
src/engine/: engine.cpp
src/engine/camera/: camera.cpp  frustum.cpp
src/engine/entity/: aabb.cpp  cube.cpp  plane.cpp  quad.cpp  ray.cpp  sphere.cpp
src/engine/model/: mesh.cpp
src/engine/shader/: shader.cpp
src/engine/sound/: buffer.cpp  source.cpp
src/engine/world/: block.cpp  chunk.cpp  cloud.cpp  face.cpp  generator.cpp  height_map.cpp  sky.cpp  world.cpp
src/logger/: entry.cpp  logger.cpp
src/manager/: camera_manager.cpp  chunk_manager.cpp  display_manager.cpp  shader_manager.cpp  sound_manager.cpp  texture_manager.cpp
src/threading/: thread_pool.cpp
src/utility/: colour_utility.cpp  file_utility.cpp  math_utility.cpp  string_utility.cpp
tmp/: block.json
